fix layout z-index

--- a/src/Home.scss
+++ b/src/Home.scss
@@ -7,6 +7,7 @@ section {
 	position: relative;
 	// top: 60px;
 	overflow: hidden;
+	z-index:2;
 
 
 	> * {
