--- a/src/components/BackToTop/BackToTop.scss
+++ b/src/components/BackToTop/BackToTop.scss
@@ -1,12 +1,1 @@
-button {
-    i{
-        position: fixed;
-        bottom: 45px;
-        right: 55px;
-        opacity:0;
-        
-        border: none;
-        background-color: transparent;
 
-    }
-}
