--- a/src/components/Portfolio/Portfolio.scss
+++ b/src/components/Portfolio/Portfolio.scss
@@ -5,9 +5,12 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-
+	position: relative;
+	z-index: 2;
+	
 	h1 {
-		margin-top: 50px;
+		justify-content: flex-start;
+		margin-top: 100px;
 		font-size: 50px;
 	}
 
