--- a/src/components/Project/Project.scss
+++ b/src/components/Project/Project.scss
@@ -5,27 +5,28 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-
+	position: relative;
+	
 	h1 {
 		align-content: flex-start;
-		margin-top: 40px;
+		margin-top: 100px;
 		margin-bottom: 20px;
 		font-size: 40px;
 		overflow: hidden;
 	}
 
 	ul {
-		margin: 10px;
-		padding: 0;
+		// margin: 10px;
+		// padding: 0;
 		list-style: none;
 		display: flex;
-
+		
 		li {
 			font-size: 14px;
 			margin-right: 40px;
 			padding: 0.7;
 			overflow: hidden;
-
+			
 			.container {
 				width: 350px;
 				height: 550px;
@@ -33,12 +34,13 @@
 				border: 1px solid gray;
 				margin: 10px 20px;
 				display: flex;
+				flex-wrap: wrap;
 				flex-direction: column;
 				align-items: center;
-				position: relative;
-
+				background-color: transparent;
+				
 				&:hover {
-					box-shadow: 5px 10px 18px #888888;
+					box-shadow: 3px 5px 9px #888888;
 				}
 
 				img {
